fix body overflow problem

--- a/src/small-device.scss
+++ b/src/small-device.scss
@@ -3,9 +3,10 @@
 }
 
 @media only screen and (max-width: 960px) {
-  body {
+  body:has(.small-device-notification-overlay) {
     overflow: hidden;
   }
+
   .small-device-notification-overlay {
     z-index: 10;
     position: fixed;
